# cmake-metaproject-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  cleanup.sh  launch.sh
source/: CMakeLists.txt
source/myapp/: CMakeLists.txt
source/myapp/src/: CMakeLists.txt  main.cpp  myapp.cpp  myapp.h
source/mylib0/: CMakeLists.txt
source/mylib0/include/: mylib0.h
source/mylib0/src/: CMakeLists.txt  mylib0-defs.h  mylib0.cpp
source/mylib1/: CMakeLists.txt
source/mylib1/include/: mylib1.h
source/mylib1/src/: CMakeLists.txt  mylib1-defs.h  mylib1.cpp
